some changes in button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,6 +912,10 @@ footer a {
     bottom: 22px;
 }
 
+button {
+    cursor: pointer;
+}
+
 @media (min-width:576px) {
     .col-sm-6 {
         width: 50%;
