--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,6 +916,10 @@ button {
     cursor: pointer;
 }
 
+.gap-50 {
+    gap: 50px;
+}
+
 @media (min-width:576px) {
     .col-sm-6 {
         width: 50%;
